--- a/app/views/public/articles/show.html.erb
+++ b/app/views/public/articles/show.html.erb
@@ -1,6 +1,8 @@
 <div class="article-show">
   <div class="article-show-top">
+    <!--温泉名-->
     <h1 class="article-show-title"><%= @article.name %></h1>
+    <!--総合評価-->
     <div id="star-rate-<%= @article.id %>">総合評価　</div>
       <script>
       $('#star-rate-<%= @article.id %>').raty({
@@ -13,26 +15,28 @@
         score: <%= @article.comments.average(:rate).to_f.round(1) %>,
       });
       </script>
-
-      <% if user_signed_in? %>
+      <!--ユーザログインしていれば「行きたいリストに追加」が表示される-->
+    <% if user_signed_in? %>
       <div class="favorite-btn"><%= render "public/favorites/favorite-btn", article: @article %></div>
-      <% end %>
+    <% end %>
   </div>
+  
   <div class="article-show-image">
+    <!--写真-->
     <%= attachment_image_tag(@article, :image, :fill, 250, 250) %>
     <div class="article-show-image-contents">
+      <!--ユーザログインしていればスタンプが表示される-->
       <% if user_signed_in? %>
       <div class="stamp-btn"><%= render "public/stamps/stamp-btn", article: @article %></div>
       <% end %>
     </div>
   </div>
-
+<!--温泉情報-->
   <table class="article-show-information">
     <tr>
       <td>住所</td>
       <td>
         <%= @article.address_city %>
-
       </td>
     </tr>
     <tr>
@@ -59,7 +63,7 @@
     <td><%= link_to '編集', edit_article_path(@article), class: "article-show-edit" %></td>
   </table>
 
-<!--googlemap表示　-->
+<!--googlemap表示-->
 
 <div id='map'></div>
 <style>
@@ -70,66 +74,64 @@
 </style>
 
 <script>
-
-let map;
-
-function initMap(){
-
-  geocoder = new google.maps.Geocoder()
-
-  map = new google.maps.Map(document.getElementById('map'), {
-    center: {lat: <%= @article.latitude %>, lng: <%= @article.longitude %>},
-    zoom: 12,
-  });
-
-
-  (function(){
-    var contentString = "住所：<%= @article.address_city %>";
-
-    var marker = new google.maps.Marker({
-        position:{lat: <%= @article.latitude %>, lng: <%= @article.longitude %>},
-        map: map,
-        title: contentString
+  let map;
+  
+  function initMap(){
+  //マップを表示
+    geocoder = new google.maps.Geocoder()
+  
+    map = new google.maps.Map(document.getElementById('map'), {
+      center: {lat: <%= @article.latitude %>, lng: <%= @article.longitude %>},
+      zoom: 12,
     });
-  })();
-  }
-
+  
+  //住所から緯度経度を割り出しマップにピンで表示
+    (function(){
+      var contentString = "住所：<%= @article.address_city %>";
+  
+      var marker = new google.maps.Marker({
+          position:{lat: <%= @article.latitude %>, lng: <%= @article.longitude %>},
+          map: map,
+          title: contentString
+      });
+    })();
+    }
 </script>
 <script src="https://maps.googleapis.com/maps/api/js?key=<%=ENV["Google_Maps_API_Key"]%>&callback=initMap" async defer></script>
-
+<!--コメントフォーム-->
  <div class="new-comment">
    <h3>コメントフォーム</h3>
-  <%= form_with(model:[@article, @comment],data: {remote: false}) do |f| %>
-    <div class="form-group">
-      <%= f.text_field :title, placeholder: "タイトル" %>
-    </div>
-    <div class="form-group">
-      <%= f.text_area :body, placeholder: "コメントをここに" %>
-    </div>
-    <!-- 評価 -->
-    <div class="form-group row" id="star">
-      <%= f.label :rate,'評価 ', class:'col-md-3 col-form-label' %>
-      <%= f.hidden_field :rate, id: :review_star %>
-    </div>
-    <!-- 評価javascript -->
-    <script>
-    $('#star').raty({
-      size     : 36,
-      starOff:  '<%= asset_path('star-off.png') %>',
-      starOn : '<%= asset_path('star-on.png') %>',
-      starHalf: '<%= asset_path('star-half.png') %>',
-      scoreName: 'comment[rate]',
-      half: true,
-    });
-    </script>
-
-<!-- 送信ボタン -->
-    <%= f.submit "送信する", class: "form-group" %>
+    <%= form_with(model:[@article, @comment],data: {remote: false}) do |f| %>
+      <div class="form-group">
+        <%= f.text_field :title, placeholder: "タイトル" %>
+      </div>
+      <div class="form-group">
+        <%= f.text_area :body, placeholder: "コメントをここに" %>
+      </div>
+      <!-- 評価 -->
+      <div class="form-group row" id="star">
+        <%= f.label :rate,'評価 ', class:'col-md-3 col-form-label' %>
+        <%= f.hidden_field :rate, id: :review_star %>
+      </div>
+      <!-- 評価javascript -->
+      <script>
+      $('#star').raty({
+        size     : 36,
+        starOff:  '<%= asset_path('star-off.png') %>',
+        starOn : '<%= asset_path('star-on.png') %>',
+        starHalf: '<%= asset_path('star-half.png') %>',
+        scoreName: 'comment[rate]',
+        half: true,
+      });
+      </script>
+  <!-- 送信ボタン -->
+      <%= f.submit "送信する", class: "form-group" %>
   <% end %>
 
   <p>コメント件数：<%= @article.comments.count %></p>
 
 </div>
+<!--コメントを表示-->
   <div class="comments">
     <%= render 'public/comments/comment', article: @article,comment: @comment %>
   </div>
