--- a/app/views/admin/articles/edit.html.erb
+++ b/app/views/admin/articles/edit.html.erb
@@ -1,62 +1,53 @@
-<% if @article.errors.any? %>
-  <div id="error_explanation">
-    <h3><%= pluralize(@article.errors.count, "error") %>件のエラーが発生しました</h3>
-    <ul>
-      <% @article.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-    </ul>
-  </div>
-<% end %>
+<%= render 'layouts/errors', obj: @article %>
 <div class="devise-container">
-<h1>編集(管理者側)</h1>
-<%= form_with model: @article,url: admin_article_path,local: true do |f| %>
-  <table>
-    <div class="form-group">
+  <h1>編集(管理者側)</h1>
+  
+  <!--情報更新フォーム-->
+  <%= form_with model: @article,url: admin_article_path,local: true do |f| %>
+    <table>
+      <div class="form-group">
         <p><%= f.label :外観画像 %>
         <%= f.attachment_field :image, class: "form-control-file product_image" %></p>
-    </div>
-
-    <div class="form-group">
+      </div>
+      
+      <div class="form-group">
         <p><%= f.label :名前 %>
         <%= f.text_field :name, autofocus: true, class: "name" %></p>
-    </div>
-
-
-    <div class="form-group">
+      </div>
+    
+      <div class="form-group">
         <p><%= f.label :住所 %>
         <%= f.text_field :address_city, autocomplete: 'address_city', class: 'address_city' %></p>
-    </div>
-
-
-    <div class="form-group">
+      </div>
+      
+      <div class="form-group">
         <p><%= f.label :公式サイト %>
         <%= f.text_field :site_url, autofocus: true, class: "site_url" %></p>
-    </div>
-
-    <div class="form-group">
+      </div>
+      
+      <div class="form-group">
         <p><%= f.label :料金説明 %>
         <%= f.text_area :tax, autofocus: true, class: "tax" %></p>
-    </div>
-
-    <div class="form-group">
+      </div>
+      
+      <div class="form-group">
         <p><%= f.label :営業時間 %>
         <%= f.text_field :opening_hours, autofocus: true, class: "opening_hours" %></p>
-    </div>
-
-    <div class="form-group">
+      </div>
+      
+      <div class="form-group">
         <p><%= f.label :定休日 %>
         <%= f.text_field :closed, autofocus: true, class: "closed" %></p>
-    </div>
-
-    <div class="form-group">
+      </div>
+      
+      <div class="form-group">
         <p><%= f.label :その他 %>
         <%= f.text_area :introduction, autofocus: true, placeholder: "説明文を記述", class: "introduction" %></p>
-    </div>
-
-    <div class="form-group">
+      </div>
+      
+      <div class="form-group">
       <%= f.submit "更新" ,class: 'btn btn-sm btn-success' %>
-    </div>
-  </table>
-<% end %>
+      </div>
+    </table>
+  <% end %>
 </div>
