--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,17 +4,20 @@
 </nav>
 <nav class="navbar-right">
     <% if user_signed_in? %>
+    <!--ユーザログイン後-->
       <li><%= link_to 'マップ検索', mapping_path, class:"nav-list-item" %></li>
       <li><%= link_to 'マイページ', user_path(current_user), class:"nav-list-item" %></li>
       <li><%= link_to '一覧', articles_path, class:"nav-list-item" %></li>
       <li><%= link_to '記録', calender_user_path(current_user), class:"nav-list-item" %></li>
       <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete,class:"nav-list-item" %></li>
     <% elsif admin_signed_in? %>
+    <!--管理者ログイン後-->
       <h2 class="nav-list-item">管理者ページ</h2>
       <li><%= link_to '一覧',  articles_path, class:"nav-list-item" %></li>
       <li><%= link_to '新規投稿',  new_admin_article_path, class:"nav-list-item" %></li>
       <li><%= link_to 'ログアウト', destroy_admin_session_path, method: :delete,class:"nav-list-item" %></li>
     <% else %>
+    <!--未ログイン-->
       <li><%= link_to ' About',  about_path,class:"nav-list-item" %></li>
       <li><%= link_to '一覧',  articles_path, class:"nav-list-item" %></li>
       <li><%= link_to 'マップ検索', mapping_path,class:"nav-list-item" %></li>
