--- a/app/views/public/articles/index.html.erb
+++ b/app/views/public/articles/index.html.erb
@@ -1,39 +1,45 @@
 <h1>一覧</h1>
+<!--検索フォーム-->
 <div class="search-form">
   <%= form_with url: search_path, method: :get, local: true do |f| %>
-    <%= f.text_field :keyword, value: @keyword, placeholder: "温泉名、県名などを入力" %>
+    <%= f.text_field :keyword, value: @keyword %>
     <%= f.submit "検索" %>
   <% end %>
 </div>
 
 <p><%= link_to 'ランキングページへ', ranking_path,class:"fas fa-crown" %></p>
 
+<!--情報-->
 <div class= "articles-container">
   <% @articles.each do |article| %>
     <div class="article-box">
+      <!--温泉名-->
       <p><%= article.name %></p>
-        <% if admin_signed_in? %>
+      <!--画像、リンク先は管理者側とエンドユーザ側で分ける-->
+      <% if admin_signed_in? %>
         <%= link_to admin_article_path(article) do %>
-        <%= attachment_image_tag article, :image, :fill, 200, 200, class: 'grid-article' %>
+        <%= attachment_image_tag(article, :image, :fill, 200, 200) %>
         <% end %>
       <% else %>
         <%= link_to article_path(article) do %>
-        <%= attachment_image_tag article, :image, :fill, 200, 200, class: 'grid-article' %>
+        <%= attachment_image_tag(article, :image, :fill, 200, 200) %>
         <% end %>
       <% end %>
+      <!--総合評価-->
       <div id="star-rate-<%= article.id %>"></div>
-      <p>コメント件数：<%= article.comments.count %></p>
         <script>
-        $('#star-rate-<%= article.id %>').raty({
-          size: 36,
-          starOff:  '<%= asset_path('star-off.png') %>',
-          starOn : '<%= asset_path('star-on.png') %>',
-          starHalf: '<%= asset_path('star-half.png') %>',
-          half: true,
-          readOnly: true,
-          score: <%= article.comments.average(:rate).to_f.round(1) %>,
-        });
+          $('#star-rate-<%= article.id %>').raty({
+            size: 36,
+            starOff:  '<%= asset_path('star-off.png') %>',
+            starOn : '<%= asset_path('star-on.png') %>',
+            starHalf: '<%= asset_path('star-half.png') %>',
+            half: true,
+            readOnly: true,
+            score: <%= article.comments.average(:rate).to_f.round(1) %>,
+          });
         </script>
+      <!--コメント数-->
+      <p>コメント件数：<%= article.comments.count %></p>
     </div>
   <% end %>
 </div>
