--- a/app/views/public/articles/search.html.erb
+++ b/app/views/public/articles/search.html.erb
@@ -3,8 +3,10 @@
 <div class= "articles-container">
   <% @articles.each do |article| %>
     <div class="article-box">
+      <!--名前-->
       <p><%= article.name %></p>
-        <% if admin_signed_in? %>
+      <!--画像、リンク先は管理者側とエンドユーザ側で分ける-->
+      <% if admin_signed_in? %>
         <%= link_to admin_article_path(article) do %>
         <%= attachment_image_tag article, :image, :fill, 200, 200, class: 'grid-article' %>
         <% end %>
@@ -13,19 +15,21 @@
         <%= attachment_image_tag article, :image, :fill, 200, 200, class: 'grid-article' %>
         <% end %>
       <% end %>
+      <!--総合評価-->
       <div id="star-rate-<%= article.id %>"></div>
-      <p>コメント件数：<%= article.comments.count %></p>
         <script>
-        $('#star-rate-<%= article.id %>').raty({
-          size: 36,
-          starOff:  '<%= asset_path('star-off.png') %>',
-          starOn : '<%= asset_path('star-on.png') %>',
-          starHalf: '<%= asset_path('star-half.png') %>',
-          half: true,
-          readOnly: true,
-          score: <%= article.comments.average(:rate).to_f.round(1) %>,
-        });
+          $('#star-rate-<%= article.id %>').raty({
+            size: 36,
+            starOff:  '<%= asset_path('star-off.png') %>',
+            starOn : '<%= asset_path('star-on.png') %>',
+            starHalf: '<%= asset_path('star-half.png') %>',
+            half: true,
+            readOnly: true,
+            score: <%= article.comments.average(:rate).to_f.round(1) %>,
+          });
         </script>
+      <!--コメント件数-->
+      <p>コメント件数：<%= article.comments.count %></p>
     </div>
   <% end %>
 </div>
