--- a/app/views/public/blogs/new.html.erb
+++ b/app/views/public/blogs/new.html.erb
@@ -1,31 +1,33 @@
+<%= render 'layouts/errors', obj: @blog %>
 <div class="devise-container">
-<h2>記録を追加</h2>
-<%= form_with model: @blog,url: blogs_path,local: true do |f| %>
-<table>
-    <div class="form-group">
-        <p><%= f.label :タイトル %>
-        <%= f.text_field :title, autofocus: true, class: "title" %></p>
-    </div>
-    <div class="form-group">
-        <p><%= f.label :画像 %>
-        <%= f.attachment_field :image, class: "blog_image" %></p>
-    </div>
-    <div class="form-group">
-        <p><%= f.label :日時 %>
-        <%= f.datetime_select :start_time %></p>
-  　</div>
-    <div class="form-group">
-        <p><%= f.label :内容 %>
-        <%= f.text_area :body, autofocus: true, class: "body" %></p>
-    </div>
-    <div class="form-group">
-        <p><%= f.label :メモ %>
-        <%= f.text_area :memo, autofocus: true, class: "memo" %></p>
-    </div>
-    <div class="form-group">
-      <%= f.submit "追加" ,class: 'btn btn-sm btn-success' %>
-    </div>
-</table>
-<% end %>
+    <h2>記録を追加</h2>
+    <!--記録新規登録フォーム-->
+    <%= form_with model: @blog,url: blogs_path,local: true do |f| %>
+    <table>
+        <div class="form-group">
+            <p><%= f.label :タイトル %>
+            <%= f.text_field :title, autofocus: true, class: "title" %></p>
+        </div>
+        <div class="form-group">
+            <p><%= f.label :画像 %>
+            <%= f.attachment_field :image, class: "blog_image" %></p>
+        </div>
+        <div class="form-group">
+            <p><%= f.label :日時 %>
+            <%= f.datetime_select :start_time %></p>
+        　</div>
+        <div class="form-group">
+            <p><%= f.label :内容 %>
+            <%= f.text_area :body, autofocus: true, class: "body" %></p>
+        </div>
+        <div class="form-group">
+            <p><%= f.label :メモ %>
+            <%= f.text_area :memo, autofocus: true, class: "memo" %></p>
+        </div>
+        <div class="form-group">
+          <%= f.submit "追加" ,class: 'btn btn-sm btn-success' %>
+        </div>
+    </table>
+    <% end %>
 </div>
 <div class="user-show-empty"></div>
