--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,12 +1,13 @@
-  <body class="top-body">
-    <main class="top-main">
+<body class="top-body">
+  <main class="top-main">
     <div class="top-visual">
       <div class="empty">
         <h1 class="top-title">ON-SEN</h1>
       </div>
       <div class="top-container">
+        <!--ログイン画面へリンク-->
         <%= link_to("入湯", new_user_session_path,class:"top-enter") %>
       </div>
     </div>
-    </main>
+  </main>
 </body>
