--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -1,5 +1,7 @@
+<%= render 'layouts/errors', obj: @user %>
 <div class="devise-container">
 <h1>プロフィール変更</h1>
+<!--ユーザー情報変更フォーム-->
 <%= form_with model: @user,url: user_path,local: true do |f| %>
   <table>
     <div class="form-group">
