--- a/app/views/public/users/favorites.html.erb
+++ b/app/views/public/users/favorites.html.erb
@@ -1,25 +1,34 @@
 <h2>いいね一覧</h2>
 <div class= "articles-container">
+  <!--いいね一覧を表示-->
 <% @user.favorite_articles.each do |article| %>
-<div class="article-box">
-<p><%= article.name %></p>
-<%= link_to article_path(article) do %>
-<%= attachment_image_tag article, :image, :fill, 200, 200, class: 'grid-article' %>
-<% end %>
-      <div id="star-rate-<%= article.id %>"></div>
-      <p>コメント件数：<%= article.comments.count %></p>
-        <script>
-        $('#star-rate-<%= article.id %>').raty({
-          size: 36,
-          starOff:  '<%= asset_path('star-off.png') %>',
-          starOn : '<%= asset_path('star-on.png') %>',
-          starHalf: '<%= asset_path('star-half.png') %>',
-          half: true,
-          readOnly: true,
-          score: <%= article.comments.average(:rate).to_f.round(1) %>,
-        });
-        </script>
-</div>
+  <div class="article-box">
+    <p><%= article.name %></p>
+    <!--画像、リンク先は管理者側とエンドユーザ側で分ける-->
+    <% if admin_signed_in? %>
+      <%= link_to admin_article_path(article) do %>
+      <%= attachment_image_tag article, :image, :fill, 200, 200, class: 'grid-article' %>
+      <% end %>
+    <% else %>
+      <%= link_to article_path(article) do %>
+      <%= attachment_image_tag article, :image, :fill, 200, 200, class: 'grid-article' %>
+      <% end %>
+    <% end %>
+    <!--総合評価-->
+    <div id="star-rate-<%= article.id %>"></div>
+      <script>
+      $('#star-rate-<%= article.id %>').raty({
+        size: 36,
+        starOff:  '<%= asset_path('star-off.png') %>',
+        starOn : '<%= asset_path('star-on.png') %>',
+        starHalf: '<%= asset_path('star-half.png') %>',
+        half: true,
+        readOnly: true,
+        score: <%= article.comments.average(:rate).to_f.round(1) %>,
+      });
+      </script>
+    <p>コメント件数：<%= article.comments.count %></p>
+  </div>
 <% end %>
 </div>
 <div class="user-show-empty"></div>
