RSpecユーザーログイン機能

--- a/app/views/admin/articles/new.html.erb
+++ b/app/views/admin/articles/new.html.erb
@@ -1,5 +1,6 @@
 <%= render 'layouts/errors', obj: @article %>
 <div class="devise-container">
+<!--新規登録フォーム-->
 <h1>新規投稿(管理者側)</h1>
 <%= form_with model: @article,url: admin_articles_path,local: true do |f| %>
   <table>
