--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,7 +21,7 @@
       <li><%= link_to ' About',  about_path,class:"nav-list-item" %></li>
       <li><%= link_to '一覧',  articles_path, class:"nav-list-item" %></li>
       <li><%= link_to 'マップ検索', mapping_path,class:"nav-list-item" %></li>
-      <li><%= link_to ' 新規登録', new_user_registration_path,class:"nav-list-item" %></li>
+      <li><%= link_to ' 新規登録', new_user_registration_path,class:"nav-list-item header-sign-up" %></li>
       <li><%= link_to ' ログイン', new_user_session_path,class:"nav-list-item" %></li>
     <% end %>
   </nav>
