--- a/app/views/public/users/registrations/new.html.erb
+++ b/app/views/public/users/registrations/new.html.erb
@@ -28,7 +28,7 @@
   </div>
 
   <div class="form-group">
-    <%= f.submit "新規登録" %>
+    <%= f.submit "新規登録",class: "sign-up-btn" %>
   </div>
 <% end %>
 
