--- a/app/views/public/articles/index.html.erb
+++ b/app/views/public/articles/index.html.erb
@@ -18,11 +18,11 @@
       <!--画像、リンク先は管理者側とエンドユーザ側で分ける-->
       <% if admin_signed_in? %>
         <%= link_to admin_article_path(article) do %>
-        <%= attachment_image_tag article, :image, :fill, 200, 200, class: 'grid-article' %>
+        <%= attachment_image_tag article, :image, class: 'grid-article article-image' %>
         <% end %>
       <% else %>
         <%= link_to article_path(article) do %>
-        <%= attachment_image_tag article, :image, :fill, 200, 200, class: 'grid-article' %>
+        <%= attachment_image_tag article, :image, class: 'grid-article article-image' %>
         <% end %>
       <% end %>
       <!--総合評価-->
