--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -40,11 +40,11 @@
           <!--画像、リンク先は管理者側とエンドユーザ側で分ける-->
           <% if admin_signed_in? %>
             <%= link_to admin_article_path(article) do %>
-              <%= attachment_image_tag article, :image, :fill, 103, 103, class: 'grid-article' %>
+              <%= attachment_image_tag article, :image, :fill, 103, 103, class: 'grid-article-show' %>
             <% end %>
           <% else %>
             <%= link_to article_path(article) do %>
-              <%= attachment_image_tag article, :image, :fill, 103, 103, class: 'grid-article' %>
+              <%= attachment_image_tag article, :image, :fill, 103, 103, class: 'grid-article-show' %>
             <% end %>
           <% end %>
         </div>
