--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <!--ホーム画面でロード画面を表示-->
   <% if current_page?(root_path) %>
     <div id="splash">
-        <div id="splash_logo"><%= image_tag 'My Post (14).png', class: "d-block w-100 fadeUp"%></div>
+      <div id="splash_logo"><%= (image_tag 'My Post (14).png', class: "d-block w-100 fadeUp") %></div>
     </div>
     <%= render 'layouts/header' %>
     <%= yield %>
