--- a/app/assets/stylesheets/public/comments.scss
+++ b/app/assets/stylesheets/public/comments.scss
@@ -19,3 +19,11 @@
 .return-btn {
   text-align: center;
 }
+
+.comment-user-image {
+  width: 40px;
+  height: 40px;
+  border-radius: 50px;
+  object-fit: cover;
+  margin-right: 10px;
+}
