--- a/app/views/admin/articles/new.html.erb
+++ b/app/views/admin/articles/new.html.erb
@@ -41,7 +41,7 @@
 
     <div class="form-group">
         <p><%= f.label :その他 %>
-        <%= f.text_area :introduction, autofocus: true, placeholder: "説明文を記述", class: "introduction" %></p>
+        <%= f.text_area :introduction, autofocus: true, placeholder: "サウナの有無、駐車場の有無などを記載", class: "introduction" %></p>
     </div>
 
     <tr class="actions">
