--- a/app/views/public/articles/mapping.html.erb
+++ b/app/views/public/articles/mapping.html.erb
@@ -1,6 +1,9 @@
-
-<div class="map-body">
-
+<body class="mapping-body">
+<div class="map-main">
+<div class="map-main-title">
+	<h1 class="map-main-text">地図で温泉を探す</h1>
+	<p>全<%= Article.count %>件</p>
+</div>
 <div id="japan-map" class="clearfix">
 
 <div id="hokkaido-touhoku" class="clearfix">
@@ -283,3 +286,4 @@
 </div> <!-- japan-map -->
 
 </div>
+</body>
