--- a/app/views/public/articles/ranking.html.erb
+++ b/app/views/public/articles/ranking.html.erb
@@ -7,6 +7,8 @@
       <p>第<%= i%>位</p>
       <!--名前-->
       <p><%= article.name %></p>
+      <!--住所-->
+      <p><%= article.address_city %></p>
       <!--画像、リンク先は管理者側とエンドユーザ側で分ける-->
       <% if admin_signed_in? %>
         <%= link_to admin_article_path(article) do %>
