--- a/app/views/public/comments/_comment.html.erb
+++ b/app/views/public/comments/_comment.html.erb
@@ -4,7 +4,7 @@
     <div class="comment-box-top">
       <!--コメントユーザーのマイページにリンク-->
       <%= link_to user_path(comment.user) do %>
-        <%= attachment_image_tag(comment.user, :profile_image, :fill, 30, 30, fallback: "My Post (11).png", size:'30x30') %>
+        <%= attachment_image_tag comment.user, :profile_image, fallback: "My Post (11).png",class: "comment-user-image" %>
       <% end %>
       <%= comment.user.name %>
       <%= comment.title %>
