--- a/app/views/public/articles/mapping.html.erb
+++ b/app/views/public/articles/mapping.html.erb
@@ -1,5 +1,5 @@
 <body class="mapping-body">
-<div class="map-main">
+<main class="mapping-main">
 <div class="map-main-title">
 	<h1 class="map-main-text">地図で温泉を探す</h1>
 	<p>全<%= Article.count %>件</p>
@@ -285,5 +285,5 @@
 
 </div> <!-- japan-map -->
 
-</div>
+</main>
 </body>
