--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -1,3 +1,4 @@
+<body class="devise-body">
 <%= render 'layouts/errors', obj: @user %>
 <div class="devise-container">
 <h1>プロフィール変更</h1>
@@ -24,3 +25,4 @@
 <% end %>
 </div>
 <div class="user-show-empty"></div>
+</body>
