--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,17 +13,14 @@
  *= require_tree .
  *= require_self
  */
- body {
-   margin: 0;
-   padding: 0;
- }
 
  main {
   width: 80%;
   margin: 0 auto;
-  padding: 50px 20px 20px 50px;
+  padding: 20px 20px 20px 50px;
   margin-bottom: 70px;
   background-size: cover;
+  margin-top: 30px;
  }
 
  header {
@@ -66,6 +63,7 @@
     text-align: center;
     padding-bottom: 30px;
     border-radius: 2%;
+    background-color: rgba(250, 250, 250, 0.8);
 }
 
 .sign-up-title {
