--- a/app/assets/stylesheets/public/style_map.css
+++ b/app/assets/stylesheets/public/style_map.css
@@ -2,7 +2,7 @@
 /* CSS Document */
 
 
-.map-main {
+.mapping-main {
   font-family: "Helvetica Neue", "Hiragino Sans", "Hiragino Kaku Gothic ProN","ヒラギノ角ゴ ProN W3", Meiryo, "メイリオ", sans-serif;
 	font-size: 16px;
 	line-height: 1.5em;
@@ -14,7 +14,7 @@
 }
 
 .map-main-title {
-	margin-left: 60px;
+	margin-left: 30px;
 	font-family: Helvetica;
 }
 
