--- a/app/views/admin/registrations/new.html.erb
+++ b/app/views/admin/registrations/new.html.erb
@@ -1,36 +1,41 @@
-<div class="devise-container">
-<h2 class="sign-up-title">新規登録（管理者側）</h2>
+<body class="devise-body">
+  
+    <div class="devise-container">
+      <h2 class="sign-up-title">新規登録（管理者側）</h2>
+      
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= render "admin/shared/error_messages", resource: resource %>
+      
+        <div class="form-group">
+          <%= f.label :名前 %><br />
+          <%= f.text_field :name, autofocus: true %>
+        </div>
+      
+        <div class="form-group">
+          <%= f.label :メールアドレス %><br />
+          <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+        </div>
+      
+        <div class="form-group">
+          <%= f.label :パスワード %>
+          <% if @minimum_password_length %>
+          <em>(<%= @minimum_password_length %>文字以上)</em>
+          <% end %><br />
+          <%= f.password_field :password, autocomplete: "new-password" %>
+        </div>
+      
+        <div class="form-group">
+          <%= f.label :パスワード（確認用） %><br />
+          <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+        </div>
+      
+        <div class="form-group">
+          <%= f.submit "新規登録" %>
+        </div>
+      <% end %>
+      
+      <%= render "admin/shared/links" %>
+      </div>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "admin/shared/error_messages", resource: resource %>
+</body>
 
-  <div class="form-group">
-    <%= f.label :名前 %><br />
-    <%= f.text_field :name, autofocus: true %>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :メールアドレス %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :パスワード %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %>文字以上)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :パスワード（確認用） %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="form-group">
-    <%= f.submit "新規登録" %>
-  </div>
-<% end %>
-
-<%= render "admin/shared/links" %>
-</div>
