--- a/app/views/public/users/calender.html.erb
+++ b/app/views/public/users/calender.html.erb
@@ -1,3 +1,5 @@
+<body class="calender-body">
+  <main class="calender-main">
 <h1>記録</h1>
 <!--ログインユーザのみが投稿できる-->
 <% if @user.id == current_user.id %>
@@ -12,3 +14,5 @@
     </div>
   <% end %>
 <% end %>
+
+</body>
