--- a/app/views/admin/articles/show.html.erb
+++ b/app/views/admin/articles/show.html.erb
@@ -24,34 +24,38 @@
 <!--情報一覧-->
   <table class="article-show-information">
     <tr>
-      <td>住所</td>
-      <td>
+      <td class="article-show-information-left">住所</td>
+      <td class="article-show-information-right">
         <%= @article.address_city %>
       </td>
     </tr>
     <tr>
-      <td>公式サイト</td>
-      <td><%= @article.site_url %></td>
+      <td class="article-show-information-left">公式サイト</td>
+      <td class="article-show-information-right"><%= @article.site_url %></td>
     </tr>
     <tr>
-      <td>料金説明</td>
-      <td class="word-break"><%= @article.tax %></td>
+      <td class="article-show-information-left">料金説明</td>
+      <td class="article-show-information-right"><%= @article.tax %></td>
     </tr>
     <tr>
-      <td>営業時間</td>
-      <td><%= @article.opening_hours %></td>
+      <td class="article-show-information-left">営業時間</td>
+      <td class="article-show-information-right"><%= @article.opening_hours %></td>
     </tr>
     <tr>
-      <td>定休日</td>
-      <td><%= @article.closed %></td>
+      <td class="article-show-information-left">定休日</td>
+      <td class="article-show-information-right"><%= @article.closed %></td>
     </tr>
     <tr>
-      <td>その他</td>
-      <td class="word-break"><%= @article.introduction %></td>
+      <td class="article-show-information-left">その他</td>
+      <td class="article-show-information-right"><%= @article.introduction %></td>
     </tr>
     <tr>
-      <td>いいね数<%= @article.favorites.count %></td>
-      <td>スタンプ数<%= @article.stamps.count %></td>
+      <td class="article-show-information-left">いいね数</td>
+      <td class="article-show-information-right"><%= @article.favorites.count %></td>
+    </tr>
+    <tr>
+      <td class="article-show-information-left">スタンプ数</td>
+      <td class="article-show-information-right"><%= @article.stamps.count %></td>
     </tr>
       <td><%= link_to '編集', edit_admin_article_path(@article) %></td>
       <td><%= link_to '削除', admin_article_path(@article), method: :delete, data: { confirm: '本当に消しますか？' } %></td>
