--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,6 +7,7 @@
     <!--ユーザログイン後-->
       <li><%= link_to 'マップ検索', mapping_path, class:"nav-list-item" %></li>
       <li><%= link_to 'マイページ', user_path(current_user), class:"nav-list-item" %></li>
+      <li><%= link_to '新規投稿',  new_article_path, class:"nav-list-item" %></li>
       <li><%= link_to '一覧', articles_path, class:"nav-list-item" %></li>
       <li><%= link_to '記録', calender_user_path(current_user), class:"nav-list-item" %></li>
       <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete,class:"nav-list-item" %></li>
@@ -14,7 +15,7 @@
     <!--管理者ログイン後-->
       <h2 class="nav-list-item">管理者ページ</h2>
       <li><%= link_to '一覧',  articles_path, class:"nav-list-item" %></li>
-      <li><%= link_to '新規投稿',  new_admin_article_path, class:"nav-list-item" %></li>
+      <li><%= link_to 'マップ検索', mapping_path, class:"nav-list-item" %></li>
       <li><%= link_to 'ログアウト', destroy_admin_session_path, method: :delete,class:"nav-list-item" %></li>
     <% else %>
     <!--未ログイン-->
