--- a/app/views/layouts/_errors.html.erb
+++ b/app/views/layouts/_errors.html.erb
@@ -1,7 +1,9 @@
   <% if obj.errors.any? %>
   <div id="error_explanation">
+   <h2 class="alert-heading">
+      <%= obj.errors.count %> ヶ所修正して下さい
+   </h2>
    <ul>
-    <%= obj.errors.count %>errors prohibited this book from being saved:
      <% obj.errors.full_messages.each do |message| %>
       <li>
        <%= message %>
