--- a/app/views/public/articles/new.html.erb
+++ b/app/views/public/articles/new.html.erb
@@ -40,7 +40,7 @@
     </div>
 
     <div class="form-group">
-        <p><%= f.label :その他 %>
+        <p><%= f.label :説明 %>
         <%= f.text_area :introduction, autofocus: true, placeholder: "サウナの有無、駐車場の有無などを記載", class: "introduction" %></p>
     </div>
 
