--- a/app/views/public/users/registrations/edit.html.erb
+++ b/app/views/public/users/registrations/edit.html.erb
@@ -1,43 +1,44 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<body class="devise-body">
+
+<div class="devise-container">
+  <%= render "public/users/shared/error_messages", resource: resource %>
+<h1>ログイン情報変更</h1>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "public/users/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<table>
+  <div class="form-group">
+    <p><%= f.label :email %><br />
+    <%= f.email_field :email, autofocus: true, autocomplete: "email" %></p>
   </div>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+  <div class="form-group">
+    <p><%= f.label :password %> <i>(変更しない場合は空白)</i><br />
     <%= f.password_field :password, autocomplete: "new-password" %>
     <% if @minimum_password_length %>
       <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
+      <em><%= @minimum_password_length %> 文字以上</em>
+    <% end %></p>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  <div class="form-group">
+    <p><%= f.label :password_confirmation %><i>(変更しない場合は空白)</i><br />
+    <%= f.password_field :password_confirmation, autocomplete: "new-password" %></p>
   </div>
 
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
+  <div class="form-group">
+    <p><%= f.label :current_password %> <i>(現在使用されているパスワードを入力)</i><br />
+    <%= f.password_field :current_password, autocomplete: "current-password" %></p>
   </div>
 
-  <div class="actions">
+  <div class="form-group">
     <%= f.submit "Update" %>
   </div>
+  </table>
 <% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
 <%= link_to "Back", :back %>
+</div>
+</body>
