--- a/app/views/public/articles/show.html.erb
+++ b/app/views/public/articles/show.html.erb
@@ -56,7 +56,7 @@
       <td class="article-show-information-right"><%= @article.closed %></td>
     </tr>
     <tr>
-      <td class="article-show-information-left">その他</td>
+      <td class="article-show-information-left">説明</td>
       <td class="article-show-information-right"><%= @article.introduction %></td>
     </tr>
     <% if @article.user == current_user %>
