--- a/app/views/public/articles/index.html.erb
+++ b/app/views/public/articles/index.html.erb
@@ -9,46 +9,4 @@
 
 <p><%= link_to 'ランキングページへ', ranking_path,class:"fas fa-crown" %></p>
 
-<!--情報-->
-<div class= "articles-container">
-  <% @articles.each do |article| %>
-    <div class="article-box">
-      <div class="article-box-left">
-      <!--画像、リンク先は管理者側とエンドユーザ側で分ける-->
-      <% if admin_signed_in? %>
-        <%= link_to admin_article_path(article) do %>
-        <%= attachment_image_tag article, :image, class: 'grid-article article-image' %>
-        <% end %>
-      <% else %>
-        <%= link_to article_path(article) do %>
-        <%= attachment_image_tag article, :image, class: 'grid-article article-image' %>
-        <% end %>
-      <% end %>
-      </div>
-      <div class="article-box-right">
-      <!--温泉名-->
-      <p><%= article.name %></p>
-      <!--住所-->
-      <p><%= article.address_city %></p>
-      <!--総合評価-->
-      <div id="star-rate-<%= article.id %>"></div>
-        <script>
-          $('#star-rate-<%= article.id %>').raty({
-            size: 36,
-            starOff:  '<%= asset_path('star-off.png') %>',
-            starOn : '<%= asset_path('star-on.png') %>',
-            starHalf: '<%= asset_path('star-half.png') %>',
-            half: true,
-            readOnly: true,
-            score: <%= article.comments.average(:rate).to_f.round(1) %>,
-          });
-        </script>
-      <p>営業時間:<%= article.opening_hours %></p>
-      <p>定休日:<%= article.closed %></p>
-      <!--コメント数-->
-      <p>コメント件数：<%= article.comments.count %></p>
-    </div>
-    </div>
-  <% end %>
-</div>
- <div class="pagenate"><%= paginate @articles %></div>
+<%= render 'layouts/index', articles: @articles %>
