--- a/app/views/public/users/favorites.html.erb
+++ b/app/views/public/users/favorites.html.erb
@@ -1,3 +1,3 @@
 <h2>行きたいリスト</h2>
-<%= render 'layouts/index', articles: @articles %>
+<%= render 'layouts/index', articles: @user.favorite_articles %>
 <div class="user-show-empty"></div>
