マップ修正

--- a/app/assets/stylesheets/public/homes.scss
+++ b/app/assets/stylesheets/public/homes.scss
@@ -70,9 +70,10 @@
 
 .about-introduction {
    background-color: rgba( 0, 0, 0, 0.7);
-   width: 100%;
+   width: 60%;
    margin: 0 auto;
    color: white;
+   padding: 20px;
 }
 
 .top-container:hover {
