--- a/app/views/public/users/calender.html.erb
+++ b/app/views/public/users/calender.html.erb
@@ -1,18 +1,18 @@
 <body class="calender-body">
   <main class="calender-main">
-<h1>記録</h1>
-<!--ログインユーザのみが投稿できる-->
-<% if @user.id == current_user.id %>
-  <h3><%= link_to '日記をかく', new_blog_path %></h3>
-<% end %>
-<%= month_calendar events: @user.blogs do |date, blogs| %>
-  <%= date.day %>
-<!--詳細ページにリンク-->
-  <% blogs.each do |blog| %>
-    <div>
-      <%= link_to blog.title, blog_path(blog) %>
-    </div>
-  <% end %>
-<% end %>
-
+    <h1>記録</h1>
+    <!--ログインユーザのみが投稿できる-->
+    <% if @user.id == current_user.id %>
+      <h3><%= link_to '日記をかく', new_blog_path %></h3>
+    <% end %>
+    <%= month_calendar events: @user.blogs do |date, blogs| %>
+      <%= date.day %>
+    <!--詳細ページにリンク-->
+      <% blogs.each do |blog| %>
+        <div>
+          <%= link_to blog.title, blog_path(blog) %>
+        </div>
+      <% end %>
+    <% end %>
+  </main>
 </body>
